
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_3__ TYPE_1__ ;


struct TYPE_3__ {int si_fd; } ;
typedef TYPE_1__ siginfo_t ;


 int PERF_EVENT_IOC_DISABLE ;
 int PERF_EVENT_IOC_REFRESH ;
 int ioctl (int,int ,int) ;
 int total ;

void our_handler(int signum,siginfo_t *oh, void *blah) {
  int fd=oh->si_fd;
  ioctl(fd , PERF_EVENT_IOC_DISABLE,0);
  total++;
  ioctl(fd , PERF_EVENT_IOC_REFRESH,1);
}
