; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/dos/extr_17769.c_our_handler.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/dos/extr_17769.c_our_handler.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@PERF_EVENT_IOC_DISABLE = common dso_local global i32 0, align 4
@total = common dso_local global i32 0, align 4
@PERF_EVENT_IOC_REFRESH = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @our_handler(i32 %0, %struct.TYPE_3__* %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_3__*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store %struct.TYPE_3__* %1, %struct.TYPE_3__** %5, align 8
  store i8* %2, i8** %6, align 8
  %8 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %9 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  store i32 %10, i32* %7, align 4
  %11 = load i32, i32* %7, align 4
  %12 = load i32, i32* @PERF_EVENT_IOC_DISABLE, align 4
  %13 = call i32 @ioctl(i32 %11, i32 %12, i32 0)
  %14 = load i32, i32* @total, align 4
  %15 = add nsw i32 %14, 1
  store i32 %15, i32* @total, align 4
  %16 = load i32, i32* %7, align 4
  %17 = load i32, i32* @PERF_EVENT_IOC_REFRESH, align 4
  %18 = call i32 @ioctl(i32 %16, i32 %17, i32 1)
  ret void
}

declare dso_local i32 @ioctl(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
